# rust-monorepo

./: .gitignore  Cargo.toml  Makefile
keys/: cert.pem  key.pem
leetcode/: Cargo.toml
leetcode/src/: 001.rs  lc0001.rs  lc0100.rs  lc0598.rs  lc0674.rs  lc0779.rs  lc0989.rs  lc1189.rs  lib.rs
playground/: Cargo.toml
playground/src/: test1.rs  test2.rs
playground/src/advent/: day1.rs  day2.rs  day3.rs  day4.rs  utils.rs
playground/src/book/: book_struct.rs  book_test.rs
util/src/: lib.rs
webplay/backend/: Cargo.toml
webplay/backend/src/: main.rs
webplay/frontend/: Cargo.toml  index.html  main.js
webplay/frontend/src/: app.rs  lib.rs
