[package]
name = "playground"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4"
util = {path = "../util"}

[[bin]]
name = "test1"
path = "src/test1.rs"

[[bin]]
name = "test2"
path = "src/test2.rs"

[[bin]]
name = "day1"
path = "src/advent/day1.rs"

[[bin]]
name = "day2"
path = "src/advent/day2.rs"

[[bin]]
name = "day3"
path = "src/advent/day3.rs"

[[bin]]
name = "day4"
path = "src/advent/day4.rs"
